# TRANSLYAKTOR

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tests.cpp  translator.hpp
